--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,5 @@
 
-	main {
+	<--! stylizing the title --> main {
   background: #BBADFD;
   font-size: 40px;
   padding: 3rem;
@@ -7,24 +7,24 @@
   text-align: center;
   margin: 1em auto;
 }
-nav {
+<--! stylizing the nav bar --> nav {
   background: #D1B0B0;
   padding: 1.5rem;
 }
-body {
+<--! stylizing the entire body --> body {
   text-align: center;
   background: #F8EFE8;
   font-size: 30px;
 }
-	img {
+	<--! customizing the size of the image --> img {
 		width: 300px;
 		height: 110px;
 	}
 	p {
 		width: 300px;
 		background: #EDECB8;
-		float: left;
-		margin-left: 11em;
+		float: left; 
+		margin-left: 11em; <--! how far the item is away from left --> 
 		font-size: 25px;
 
 	}
@@ -40,13 +40,13 @@ body {
 		background: #EDECB8;
 		float: right;
 	font-size: 25px;
-		margin-top: 2em;
+		margin-top: 2em; <--! how far the item is away from top-->
 		margin-right: 11em;
 	}
 	section {
 		float: left;
 		margin-left: 23em;	
-		margin-top: -11em;
+		margin-top: -11em; <--! brings item further up without adjusting bottom margin -->
 		
 		}
 	
